--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         padding: 10px 0px 10px 0px;
       }
       .video, .thermometer, .order, .social{
-        border: 1px dotted:
+        border: 1px dotted;
         text-align: center;
       }
       .video {
