--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
      <div class = "span6 blank">
        Blank
      </div>
-     <div class +"span4 about">
+     <div class ="span4 about">
        About
      </div>
     </div>
