--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 
   <div class="row-fluid section1">
     <div class="span5 offset1 asset">
-      <img class="img-polaroid img-circle" src="http://placehold.it/300x300">
+      <img class="img-polaroid" src="http://placehold.it/480x300">
     </div>
     <div class="span5 copy">
       <p>
