--- a/index.html
+++ b/index.html
@@ -225,11 +225,73 @@
       </div>
     </div>
 
+ <div class="row-fluid section2">
+        <div class="span5 offset1 copy copy-right">
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
+            porta, dui sagittis hendrerit rutrum, nunc leo tempus nisl, eu
+            mollis justo velit at nunc. Fusce nec egestas sem. Donec
+            fringilla ante lectus, a pellentesque lacus dignissim ac. Sed
+            volutpat lorem ut congue malesuada. In facilisis scelerisque
+            turpis sed lacinia. Donec in orci lectus. Donec auctor semper
+            quam, eget rhoncus purus fringilla id. Phasellus id nibh eu
+            risus ultrices adipiscing.  Lorem ipsum dolor sit amet,
+            consectetur adipiscing elit. Donec porta, dui sagittis hendrerit
+            rutrum, nunc leo tempus nisl, eu mollis justo velit at
+            nunc. Fusce nec egestas sem. Donec fringilla.
+          </p>
+        </div>
+        <div class="span5 asset">
+          <img class="img-polaroid" src="http://placehold.it/480x300">
+        </div>
+      </div>
 
+   <!-- Voor de FAQ introduceren we wat JS voor een accordeon -->
+   <!-- Daarmee worden jquery.js en bootstrap.js als dependencies geintroduceerd -->
+   <!-- REFERENCE http://twitter.github.io/bootstrap/javascript.html#collapse -->
 
+   <div class="row-fluid faq">
+     <div calss="span10 offset1">
+       <h3>FAQ</h3>
+        <div class="accordion" id="accordion2">
+	  <div class="accordion-group">
+	    <div class="accordion-heading">
+	      <a class="accordion-toggle" data-toggle="collapse"
+		 data-parent="#accordion2" href="#collapseOne">
+		What does FAQ stand for?
+              </a>
+	    </div>
+	   <div id="collapseOne" class="accordion-body collapse">
+	     <div class="accordion-inner">
+	       Frequently Asked Questions
+	      </div>
+	     </div>
+	   </div>
+	  <div class="accordion-group">
+	    <div class<div class="accordion-heading">
+              <a class="accordion-toggle" data-toggle="collapse"
+                 data-parent="#accordion2" href="#collapseTwo">
+		What's a Frequently Asked Question?
+	      </a>
+	     </div>
+	    <div id="collapseTwo" class="accordion-body collapse">
+	      <div class="accordion-inner">
+		A question which is commonly asked by users
+	      </div>
+	     </div>
+	    </div>
+	  </div>
+	</div>
 
+     </div>
 
-
-
-
-
+   <!-- De plek voor de licentie, hier nu even een CC by-SA 3.0 license -->
+   <div class="row-fluid footer">
+        <div class="span12">
+          <p>On these services  <a href="http://dondersteen.net/#voorwaarden"> Dondersteen Media's conditions </a> apply:
+	  </p>
+        </div>
+      </div>
+    </div>
+  </body>
+</html>
