added the pre order button

--- a/index.html
+++ b/index.html
@@ -190,6 +190,12 @@
       </div>
      </div>
    
+    <div class="span6 offset3 order">
+            <!-- Standard Bootstrap button. -->
+            <!-- http://twitter.github.io/bootstrap/base-css.html#buttons -->
+            <button class="btn btn-success btn-large">Preorder</button>
+          </div>
+
     <div class="span6 offset2 social">
       <!-- Social buttons zijn niet inclusief in Bootstrap. -->
       <!-- We halen ze hier op REFERENCE http://noizwaves.github.io/bootstrap-social-buttons -->
@@ -288,7 +294,7 @@
    <!-- De plek voor de licentie, hier nu even een CC by-SA 3.0 license -->
    <div class="row-fluid footer">
         <div class="span12">
-          <p>On these services  <a href="http://dondersteen.net/#voorwaarden"> Dondersteen Media's conditions </a> apply:
+          <p>2013 | On these services  <a href="http://dondersteen.net/#voorwaarden"> Dondersteen Media's conditions </a> apply
 	  </p>
         </div>
       </div>
