--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang ="en">
   <head>
     <meta charset="utf-8">
-    <title>My First Bitstarter</title>
+    <title>Delivr.us</title>
     <meta name="viewport" content="width-device-width, initial-scale=1.0">
      <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css">
@@ -114,7 +114,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="brand" href="#">Bitstarter</a>
+          <a class="brand" href="#">Delivr.us</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
               <li class="active"><a href="#">Home</a></li>
@@ -137,7 +137,7 @@
 
       <div class="row-fluid heading">
 	<div class="span12">
-	 <h1>Product</h1>
+	 <h1>Delivr.us</h1>
 	</div>
      </div>
       
