fixed the span problem by deleting an image and putting in 2 blocks of text. Now there is a why, what and how.. sort of..

--- a/index.html
+++ b/index.html
@@ -218,12 +218,12 @@
 	<div class="span5 copy">
 	  
 	  <p><b>Delivr.us</b> let's people help each other out. 
-	  It's a network of movers and shakers <br></p>
-	  Everyday life is full of surprises. <br>
-	  Your son forgot his football socks (again) and the game is on in 15 minutes. 
+	  It's a network of movers and shakers</p> <br>
+	  Everyday life is full of surprises. <br><br>
+	  Your son forgets his football socks (again) and the game is on in 15 minutes. 
 	  Your husband needs his phone, but he left it on the charger at home this morning.
 	  Your friend urgently needs her cocktail dress back, - a hot date tonight -, 
-	  but you're in the middle of a party of drooling babies at the neighbours.<br><br>
+	  but you're in the middle of a neighbours' party full of drooling babies.<br><br>
 	  You know, it happens all the time. Nothing serious, but...
 
 	  
@@ -234,34 +234,37 @@
              <div class="row-fluid section1">
          <div class="span5 offset1 copy copy-right">
           
-          <p>What if you could just pick up your mobile and place a request for a little help?
+          <p>What if you could just pick up your mobile and send out a request for a little help?
 	  <br></p>
-	  Ask somebody to get your son's socks to the football fied. 
+	  Ask somebody to get your son's socks to the football field. 
 	  Or take your friend's dress and deliver it at her job location during the day?
 	  <br><br>
-	  Well, that is what we make happen here at Delivr.us. 
+	  Well we make THAT happen with Delivr.us. 
 	  We are building a network of people that help each other out, 
 	  with everyday small and nearby deliveries.<br><br>
 	  
-      <!--div class="row-fluid section1" -->
+      <!--div class="row-fluid section1"
         <div class="span5 copy">
           <img class="img-polaroid" src="http://placehold.it/480x300">
         </div>
-	 </div>
+	 </div-->
 
-      <div class="row-fluid section3">
+      <!--<div class="row-fluid section3">-->
         <div class="span5 offset1 asset">
-          <img class="img-polaroid" src="http://placehold.it/480x300">
+  <!--        <img class="img-polaroid" src="http://placehold.it/480x300">-->
         </div>
+	</div>
         <div class="span5 copy copy-right">
-	  You decide what you want to give for the job.
+	  <p>You decide what you want to give for the job.</p>
 	  It could range from a homebaked lemon pie (mine is abfab quit frankly)
 	  up to a small payment.<br><br>
 
-	  'Delivrers' are the awesome people inhabiting your city, moving around in your town. 
+	  The <b>'Delivrers'</b> taking care of the jobs, 
+	  are the awesome people inhabiting your city, 
+	  moving around in your town, just like you do everyday. 
 	  They are cycling to their schools, jobs, to do some grocery, visit a friend. At another
-	  moment of the day, it could as well be you, helping somebody else out of the waters. 
-	  Delivrers take a route that covers your A to B need. 
+	  moment of the day, this could as well be you, helping somebody else out of the waters. 
+	  <b>Delivrers</b> take a route that covers your A to B need. 
 	  Or they may be willing to divert a little to make a small buck or 
 	  just to help someone out.
 
