--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
       body{
       font-family: 'Open Sans', Helvetica, Arial, sans-serif;
       }
+
       .heading, .subheading {
       font-family: 'Ubuntu', Helvetica, Arial, sans-serif;
       text-align: center;
@@ -151,7 +152,7 @@
 
       <div class="row-fluid pitch">
 	<div class="span5 offset1 video">
-	  <img class="img-polaroid" src="http://placehold.it/480x300">
+	  <img class="img-polaroid" src="http://i.imgur.com/d4MaC8G.jpg">
 	</div>
 
 	<!-- We definieren een nieuwe 'actions'element waar statistics, order en share buttons komen, call to action-->
@@ -211,19 +212,24 @@
       <!-- REFERENCE http://twitter.github.io/bootstrap/base-css.html#images -->
       <!-- REFERENCE http://placehold.it -->
 
+
+
+
       <div class="row-fluid section1">
 	<div class="span5 offset1 asset">
-	  <img class="img-polaroid" src="http://placehold.it/480x300">
+	  <img class="img-polaroid" src="http://i.imgur.com/bo1jiOR.jpg">
 	</div>
 	<div class="span5 copy">
+
 	  
 	  <p><b>Delivr.us</b> let's people help each other out. 
 	  It's a network of movers and shakers</p> <br>
 	  Everyday life is full of surprises. <br><br>
-	  Your son forgets his football socks (again) and the game is on in 15 minutes. 
-	  Your husband needs his phone, but he left it on the charger at home this morning.
-	  Your friend urgently needs her cocktail dress back, - a hot date tonight -, 
-	  but you're in the middle of a neighbours' party full of drooling babies.<br><br>
+	  Your son forgets his football socks (again...) and the game is on in 15 minutes. 
+	  Your wife needs her phone, but she left it on the charger at home.
+	  Your friend urgently needs her cocktail dress back, something with 
+	  'a really -- REALLY--  hot date tonight', 
+	  but you're in the middle of your neighbour's toddlers' party and the room is loaded with  drooling babies in need of instant attention.<br><br>
 	  You know, it happens all the time. Nothing serious, but...
 
 	  
@@ -231,43 +237,46 @@
       </div>
 
       <div class="row-fluid section2">
-             <div class="row-fluid section1">
          <div class="span5 offset1 copy copy-right">
           
-          <p>What if you could just pick up your mobile and send out a request for a little help?
+          <p>What if you could just pick up your smartphone and send for help right away?
 	  <br></p>
-	  Ask somebody to get your son's socks to the football field. 
+	  Ask somebody to get your son's socks to the football field?
 	  Or take your friend's dress and deliver it at her job location during the day?
 	  <br><br>
-	  Well we make THAT happen with Delivr.us. 
-	  We are building a network of people that help each other out, 
-	  with everyday small and nearby deliveries.<br><br>
-	  
-      <!--div class="row-fluid section1"
+	  That's what we enable with <b>Delivr.us.</b> 
+	  We're building a network of people that help each other out, 
+	  with everyday small and nearby deliveries in their hometown. 
+	  <b>Delivr.us</b> is build on a local city per city basis.<br><br>
+          <p>We match nearby Delivrers in realtime.</p><br>	  
+          The <b>'Delivrers'</b> are the people living in your town. Cycling to their schools,
+	  jobs, getting some grocery or visiting a friend. That may well be a route that covers
+	  your A to B need. Our service matches the nearby <b>delivrers</b> to you in realtime.
+ 
+ <!--div class="row-fluid section1"
         <div class="span5 copy">
-          <img class="img-polaroid" src="http://placehold.it/480x300">
+          <img class="img-polaroid" src="http://i.imgur.com/d4MaC8G.jpg">
         </div>
-	 </div-->
 
       <!--<div class="row-fluid section3">-->
         <div class="span5 offset1 asset">
-  <!--        <img class="img-polaroid" src="http://placehold.it/480x300">-->
+  <!--        <img class="img-polaroid" src="http://i.imgur.com/bo1jiOR.jpg">-->
         </div>
 	</div>
         <div class="span5 copy copy-right">
 	  <p>You decide what you want to give for the job.</p>
-	  It could range from a homebaked lemon pie (mine is abfab quit frankly)
-	  up to a small payment.<br><br>
+	  That could range from a homebaked lemon pie up to a small payment.<br><br>
+	  By taking up your package at<b> A</b> and delivering it at its destination<b> B</b>,
+          <b>Delivrers</b> make a small buck, get spoiled with delicious pie, 
+	  meet interesting people (even if-at the moment- a little stressed out) or just help someone out.<br><br>
 
-	  The <b>'Delivrers'</b> taking care of the jobs, 
-	  are the awesome people inhabiting your city, 
-	  moving around in your town, just like you do everyday. 
-	  They are cycling to their schools, jobs, to do some grocery, visit a friend. At another
-	  moment of the day, this could as well be you, helping somebody else out of the waters. 
-	  <b>Delivrers</b> take a route that covers your A to B need. 
-	  Or they may be willing to divert a little to make a small buck or 
-	  just to help someone out.
+	  <p>Build Good Karma</p>
+	  Here is a little secret: It's really great to do. 
+	  Helping someone out gives your own day a huge positive boost. Besides good Delivrers get positive ratings and level up in the system. That's how you can gain a visible trustworthy profile..  
+	  So how about it? <b>Delivrer</b> may just as well be you on the next day!<br><br>
 
+	  <p>Where?</p>
+	  We are starting in our own hometown, city of cannals, red lights and BIKES. Lots, no really lots, ... and lots of bikes. <b>Amsterdam</b>
 	  <p>
 	  
 	</div>
