some changes in fontsizes

--- a/index.html
+++ b/index.html
@@ -222,17 +222,17 @@
 	<div class="span5 copy">
 
 	  
-	  <p><b>Delivr.us</b> let's people help each other out. 
-	  It's a network of movers and shakers</p> <br>
-	  Everyday life is full of surprises. <br><br>
+	  <p class="lead"><b>Delivr.us</b> let's people help each other out.</p> <br><br>
+	  <div class="lead">Everyday life is full of surprises. <br><br>
+	    </i></div> <p>
 	  Your son forgets his football socks (again...) and the game is on in 15 minutes. 
 	  Your wife needs her phone, but she left it on the charger at home.
 	  Your friend urgently needs her cocktail dress back, something with 
 	  'a really -- REALLY--  hot date tonight', 
 	  but you're in the middle of your neighbour's toddlers' party and the room is loaded with  drooling babies in need of instant attention.<br><br>
 	  You know, it happens all the time. Nothing serious, but...
-
 	  
+	  </p>
 	</div>
       </div>
 
@@ -268,7 +268,7 @@
 	  That could range from a homebaked lemon pie up to a small payment.<br><br>
 	  By taking up your package at<b> A</b> and delivering it at its destination<b> B</b>,
           <b>Delivrers</b> make a small buck, get spoiled with delicious pie, 
-	  meet interesting people (even if-at the moment- a little stressed out) or just help someone out.<br><br>
+	  meet interesting people (even if-at the moment- a little stressed out) or just help someone out. We are a network of movers and shakers.<br><br>
 
 	  <p>Build Good Karma</p>
 	  Here is a little secret: It's really great to do. 
