added to FAQ to the list

--- a/index.html
+++ b/index.html
@@ -294,12 +294,12 @@
 	      <div class="accordion-heading">
 		<a class="accordion-toggle" data-toggle="collapse"
 		   data-parent="#accordion2" href="#collapseOne">
-		  What does FAQ stand for?
+		  Who guarantees my stuff does not get stolen?
 		</a>
 	      </div>
 	      <div id="collapseOne" class="accordion-body collapse">
 		<div class="accordion-inner">
-		  Frequently Asked Questions
+		  We are matching delivrers with people in need of moving stuff. However we are unable to verify each and every delivrer. That is why we build the level system. Delivrers doing a good and thrustworthy job level up and get good credits. That's what you should look out for when answering to a delivrer. Furthermore you and the delivrer are closing the deal. Delivr.us has nothing to do with that. You have to be wise and carefull yourself. See our tips on how to work with Delivr.us
 		</div>
 	      </div>
 	    </div>
@@ -307,12 +307,12 @@
 	      <div class<div class="accordion-heading">
 		   <a class="accordion-toggle" data-toggle="collapse"
                       data-parent="#accordion2" href="#collapseTwo">
-		     What's a Frequently Asked Question?
+		     What should I pay?
 		   </a>
 	      </div>
 	      <div id="collapseTwo" class="accordion-body collapse">
 		<div class="accordion-inner">
-		  A question which is commonly asked by users
+		  That's really up to you. We have made a list of most commonly paid wages for what kind of deliveries that you can find <a href=#delivery_rates>here</a>. It's a personal kind of connection we enable. So some people let their personality shine through in the way they meet the compensations they offer. We have singers performing personal serenades and butchers offering selfmade sausages. My own lemonpie is actually quit awesome sauce as well... it depends. Be creative and be nice. That really gets the most responsive delivrers.
 		</div>
 	      </div>
 	    </div>
