--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 	<div class="span12">
 	  <!-- We gebruiken een speciale typography van Bootstrap voor de lead paragraph. -->
 	  <!-- REFERENCE http://twitter.github.io/bootstrap/base-css.html#typography -->
-	  <p class="lead">We let people help each other out</p>
+	  <p class="lead">We empower people to help each other out</p>
 	</div>
       </div>
 
@@ -222,7 +222,7 @@
 	<div class="span5 copy">
 
 	  
-	  <p class="lead"><b>Delivr.us</b> let's people help each other out.</p> <br><br>
+	  <p class="lead"><b>Delivr.us</b></p>Our service empowers people, to help each other out. <br><br>
 	  <div class="lead">Everyday life is full of surprises. <br><br>
 	    </i></div> <p>
 	  Your son forgets his football socks (again...) and the game is on in 15 minutes. 
