italic for 'everyday life is full of surprises'

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
 
 	  
 	  <p class="lead"><b>Delivr.us</b></p>Our service empowers people, to help each other out. <br><br>
-	  <div class="lead">Everyday life is full of surprises. <br><br>
+	  <div class="lead"><i>Everyday life is full of surprises...</i> <br><br>
 	    </i></div> <p>
 	  Your son forgets his football socks (again...) and the game is on in 15 minutes. 
 	  Your wife needs her phone, but she left it on the charger at home.
