changed the name from delivr.us to delivrs.us as I found out (a bit late) that there is an advertising company with registered brand offering QR codes for mobile under the 'delivr' brand.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang ="en">
   <head>
     <meta charset="utf-8">
-    <title>Delivr.us</title>
+    <title>Delivrs.us</title>
     <meta name="viewport" content="width-device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css">
@@ -115,7 +115,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="brand" href="#">Delivr.us</a>
+          <a class="brand" href="#">Delivrs.us</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
               <li class="active"><a href="#">Home</a></li>
@@ -138,7 +138,7 @@
 
       <div class="row-fluid heading">
 	<div class="span12">
-	  <h1>Delivr.us</h1>
+	  <h1>Delivrs.us</h1>
 	</div>
       </div>
       
@@ -222,7 +222,7 @@
 	<div class="span5 copy">
 
 	  
-	  <p class="lead"><b>Delivr.us</b></p>Our service empowers people, to help each other out. <br><br>
+	  <p class="lead"><b>Delivrs.us</b></p>Our service empowers people, to help each other out. <br><br>
 	  <div class="lead"><i>Everyday life is full of surprises...</i> <br><br>
 	    </i></div> <p>
 	  Your son forgets his football socks (again...) and the game is on in 15 minutes. 
@@ -244,10 +244,10 @@
 	  Ask somebody to get your son's socks to the football field?
 	  Or take your friend's dress and deliver it at her job location during the day?
 	  <br><br>
-	  That's what we enable with <b>Delivr.us.</b> 
+	  That's what we enable with <b>Delivrs.us.</b> 
 	  We're building a network of people that help each other out, 
 	  with everyday small and nearby deliveries in their hometown. 
-	  <b>Delivr.us</b> is build on a local city per city basis.<br><br>
+	  <b>Delivrs.us</b> is build on a local city per city basis.<br><br>
           <p>We match nearby Delivrers in realtime.</p><br>	  
           The <b>'Delivrers'</b> are the people living in your town. Cycling to their schools,
 	  jobs, getting some grocery or visiting a friend. That may well be a route that covers
