--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 
       <div class="row-fluid heading">
 	<div class="span12">
-	  <h1>Delivrs.us</h1>
+	  <h1>Delivrs.us: Development Version</h1>
 	</div>
       </div>
       
@@ -159,8 +159,9 @@
 	<!-- We define a new 'actions' div to contain statistics, order, and share buttons.-->
 	
 	<div class="span5 actions">
-          <div class="span8 offset2">
-            <div class="statistics">
+         <div class="row fluid">
+	  <div class="span8 offset2">
+            <div class="row-fluid statistics">
               <div class="span4">
 		<!-- linediv-l en linediv-r geven scheidingslijnen die er horizontaal anders uitzien dan verticaal, via de mediaqueries  -->     
 		
@@ -180,7 +181,7 @@
               </div>
             </div>
           </div>
-
+	  <div class="row-fluid">
 	  <div class="span10 offset1">      
 	    
 	    <!-- De bootstrap progress bar -->
@@ -191,13 +192,13 @@
 	      <div class="bar bar-warning" style="width: 40%;"></div>
 	    </div>
 	  </div>
-	  
+	  <div class-"row-fluid">
 	  <div class="span6 offset3 order">
             <!-- Standard Bootstrap button. -->
             <!-- http://twitter.github.io/bootstrap/base-css.html#buttons -->
             <button class="btn btn-success btn-large">Preorder</button>
           </div>
-
+	  <div class="row-fluid">
 	  <div class="span8 offset2 social">
 	    <!-- Social buttons zijn niet inclusief in Bootstrap. -->
 	    <!-- We halen ze hier op REFERENCE http://noizwaves.github.io/bootstrap-social-buttons -->
