added alts to the imgs

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 
       <div class="row-fluid pitch">
 	<div class="span5 offset1 video">
-	  <img class="img-polaroid" src="http://i.imgur.com/d4MaC8G.jpg">
+	  <img class="img-polaroid" alt="Jolly picture of cycling family" src="http://i.imgur.com/d4MaC8G.jpg">
 	</div>
 
 	<!-- We definieren een nieuwe 'actions'element waar statistics, order en share buttons komen, call to action-->
@@ -218,7 +218,7 @@
 
       <div class="row-fluid section1">
 	<div class="span5 offset1 asset">
-	  <img class="img-polaroid" src="http://i.imgur.com/bo1jiOR.jpg">
+	  <img class="img-polaroid" alt="bakkersfietsen race" src="http://i.imgur.com/bo1jiOR.jpg">
 	</div>
 	<div class="span5 copy">
 
@@ -261,7 +261,7 @@
 
       <!--<div class="row-fluid section3">-->
         <div class="span5 offset1 asset">
-  <!--        <img class="img-polaroid" src="http://i.imgur.com/bo1jiOR.jpg">-->
+  <!--        <img class="img-polaroid" alt="happy cycling family" src="http://i.imgur.com/bo1jiOR.jpg">-->
         </div>
 	</div>
         <div class="span5 copy copy-right">
