--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 
       <div class="row-fluid heading">
 	<div class="span12">
-	      <h1>Delivrs.us</h1>
+	      <h1>Delivrs.us: Development Server</h1>
 	          </div>
       </div>
       
