--- a/index.html
+++ b/index.html
@@ -108,6 +108,23 @@
       margin: 0 auto;
       }
     </style>
+    <!-- google ga.js snippet in the head of the page -used together with analytics,js at the end of this page -->
+
+<script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-42970617-1']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>
+</script>
+
   </head>
   <body>
 
@@ -343,5 +360,19 @@
         </div>
       </div>
     </div>
+
+<!-- google analytics for delivrs analytics -->
+
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-42970617-1', 'delivrs.us');
+  ga('send', 'pageview');
+
+</script>
+
   </body>
 </html>
