--- a/index.html
+++ b/index.html
@@ -163,21 +163,13 @@
       <div class="row-fluid heading">
 	<div class="span12">
 
-	    <h1>Delivrs.us</h1>
-	    </div>
-
-	      <h1>Delivrs.us: Development Server</h1>
+	      <h1>Delivrs.us: Staging Server</h1>
 	          </div>
 
       </div>
       
       <div class="row-fluid subheading">
 	<div class="span12">
-
-	    <!-- We gebruiken een speciale typography van Bootstrap voor de lead paragraph. -->
-	      <!-- REFERENCE http://twitter.github.io/bootstrap/base-css.html#typography -->
-	        <p class="lead">We empower people to help each other out</p>
-		</div>
 
 	      <!-- We gebruiken een speciale typography van Bootstrap voor de lead paragraph. -->
 	            <!-- REFERENCE http://twitter.github.io/bootstrap/base-css.html#typography -->
@@ -191,9 +183,6 @@
 
 	    <img class="img-polaroid" src="http://i.imgur.com/d4MaC8G.jpg">
 	    </div>
-
-	      <img class="img-polaroid" src="http://i.imgur.com/d4MaC8G.jpg">
-	          </div>
 
 
 	<!-- We definieren een nieuwe 'actions'element waar statistics, order en share buttons komen, call to action-->
@@ -255,12 +244,6 @@
           </div>
 
 	        <div class="span8 offset2 social">
-		      <!-- Social buttons zijn niet inclusief in Bootstrap. -->
-		          <!-- We halen ze hier op REFERENCE http://noizwaves.github.io/bootstrap-social-buttons -->
-			      <button class="btn btn-twitter"><i class="icon-twitter"></i> | Twitter</button>
-			          <button class="btn btn-facebook"><i class="icon-facebook"></i> | Facebook</button>
-				    </div>
-		</div>
 
 		            <div class="span8 offset2 social">
 
@@ -301,11 +284,6 @@
 	      <img class="img-polaroid" src="http://i.imgur.com/bo1jiOR.jpg">
 	          </div>
 	<div class="span5 copy">
-
-
-	      <p class="lead"><b>Delivrs.us</b></p>Our service empowers people, to help each other out. <br><br>
-	            <div class="lead"><i>Everyday life is full of surprises...</i> <br><br>
-		          </i></div> <p>
 
     Your son forgets his football socks (again...) and the game is on in 15 minutes. 
       Your wife needs her phone, but she left it on the charger at home.
