--- a/index.html
+++ b/index.html
@@ -242,6 +242,7 @@
 			      <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-51ff84ed714ade0d"></script>
 			      <!-- AddThis Button END -->
 			    </div>
+			    </div>
 	</div>
       </div>
 
