--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
       <div class="row-fluid heading">
 	<div class="span12">
 
-	      <h1>Delivrs.us: Staging Server</h1>
+	      <h1>Delivrs.us</h1>
 	          </div>
       </div>
       
