--- a/index.html
+++ b/index.html
@@ -215,13 +215,22 @@
 						              <div class="bar bar-warning" style="width: 40%;"></div>
 							          </div>
 					      </div>
-
+	      <!--
 	            <div class="span6 offset3 order">
             <!-- Standard Bootstrap button. -->
-            <!-- http://twitter.github.io/bootstrap/base-css.html#buttons -->
+            <!-- http://twitter.github.io/bootstrap/base-css.html#buttons 
             <button class="btn btn-success btn-large">Preorder</button>
-          </div>
+          </div> -->
 
+ 	    <div class ="span6 offset3 order">
+
+	      <a class="coinbase-button" 
+		 data-code="19ac27ba7ccf2fbea7b991124f793b76" 
+		 data-button-style="donation_large" 
+		 href="https://coinbase.com/checkouts/19ac27ba7ccf2fbea7b991124f793b76">
+		Donate Bitcoins</a>
+	      <script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>	    </div>
+ 
 		            <div class="span8 offset2 social">
 
 			      <!-- AddThis Button BEGIN -->
