adjusted position bitcoin button and took out first sentence in first text

--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
 
 	        <div class="span8 offset2 social">
 
- 	    <div class ="span6 offset3 order">
+ 	    <div class ="span6 offset1 order">
 
 	      <a class="coinbase-button" 
 		 data-code="19ac27ba7ccf2fbea7b991124f793b76" 
@@ -237,7 +237,7 @@
 		Donate Bitcoins</a>
 	      <script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>	    </div>
  
-		            <div class="span8 offset2 social">
+		            <div class="span8 offset1 social">
 
 			      <!-- AddThis Button BEGIN -->
 			      <div class="addthis_toolbox addthis_default_style addthis_32x32_style">
@@ -268,7 +268,7 @@
 	          </div>
 	<div class="span5 copy">
 
-	      <p class="lead"><b>Delivrs.us</b></p>Our service empowers people, to help each other out. <br><br>
+	      <p class="lead"><b>Delivrs.us</b></p>
 	            <div class="lead"><i>Everyday life is full of surprises...</i> <br><br>
 		          </i></div> <p>
     Your son forgets his football socks (again...) and the game is on in 15 minutes. 
