--- a/index.html
+++ b/index.html
@@ -223,7 +223,22 @@
             <button class="btn btn-success btn-large">Preorder</button>
           </div> -->
 
- 	    <div class ="span6 offset1 order">
+<!-- share buttons per MQ-->
+<!-- AddThis Smart Layers BEGIN -->
+<!-- Go to http://www.addthis.com/get/smart-layers to customize -->
+<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-51ff84ed714ade0d"></script>
+<script type="text/javascript">
+  addthis.layers({
+    'theme' : 'transparent',
+    'share' : {
+      'position' : 'left',
+      'numPreferredServices' : 5
+    }   
+  });
+</script>
+<!-- AddThis Smart Layers END -->
+
+ 	    <div class ="span6 offset2 order">
 
 	      <a class="coinbase-button" 
 		 data-code="19ac27ba7ccf2fbea7b991124f793b76" 
@@ -232,12 +247,26 @@
 		Donate Bitcoins</a>
 	      <script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>	    </div>
  
-		            <div class="span8 offset1 social">
+<div class="span6 offset2 order">
+<div class="linediv-c statistics">
 
-			      <!-- AddThis Button BEGIN -->
+<h3><p>Doneer via Paypal</p></h3>
+
+<form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
+<input type="hidden" name="cmd" value="_s-xclick">
+<input type="hidden" name="hosted_button_id" value="XU8CRY6DGUM8W">
+<input type="image" src="https://www.paypalobjects.com/nl_NL/NL/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal, de veilige en complete manier van online betalen.">
+<img alt="" border="0" src="https://www.paypalobjects.com/nl_NL/i/scr/pixel.gif" width="1" height="1">
+</form>
+</div>
+</div>
+		            <div class="span8 offset2 social statistics">
+			     <!--  <h3><p>Help us spread the word</p></h3>
+			      <!-- AddThis Button BEGIN 
 			      <div class="addthis_toolbox addthis_default_style addthis_32x32_style">
 				<a class="addthis_button_preferred_1"></a>
 				<a class="addthis_button_preferred_2"></a>
+				<a class="addthis_button_preferred_3"></a>
 				<a class="addthis_button_compact"></a>
 				<a class="addthis_counter addthis_bubble_style"></a>
 			      </div>
@@ -311,9 +340,8 @@
           <b>Delivrers</b> make a small buck, get spoiled with delicious pie, 
 	      meet interesting people (even if-at the moment- a little stressed out) or just help someone out. We are a network of movers and shakers.<br><br>
 
-	      <p>Build Good Karma</p>
-	            Here is a little secret: It's really great to do. 
-	            Helping someone out gives your own day a huge positive boost. Besides good Delivrers get positive ratings and level up in the system. That's how you can gain a visible trustworthy profile..  
+	      <p>Build REAL Karma</p>
+	            Here is a little secret: Helping someone out gives your own day a huge positive boost. Besides, good Delivrers get positive ratings and level up in the system. Real karma and virtual, how about that?! We thoroughly understand that our service is built up by our users experiencing thrustworthy deliveries. So we put in all our efforts to build you a solid and robust ratings system. Trust is key for a truly empowered system.   
 	            So how about it? <b>Delivrer</b> may just as well be you on the next day!<br><br>
 
 	            <p>Where?</p>
